# helpdeck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md  render.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0d6d0697161d_eval_runs_table.py  1107e8d05f47_append_only_audit_log.py  37f7d603fb3e_baseline.py  4595ed484a66_api_keys_table.py  51fe866934da_row_level_security.py  677bd6a813f4_identity_table_grants_for_app_role.py  68a87c13ff33_invitations_table.py  8bb42227bfe1_re_dimension_chunk_embeddings_for_oss_.py  9bce7d9b3ba7_message_trace_id.py  9d9c21511961_conversations_messages_escalations.py  bc62d0aae57b_analytics_indexes.py  bf1f6f4635af_widget_public_key_and_branding.py  e785279bf923_org_onboarded_flag.py  (+1 more)
apps/api/app/: main.py
apps/api/app/agent/: graph.py  state.py  (+2 more)
apps/api/scripts/: seed.py  seed_widget.py
apps/api/tests/: conftest.py  test_agent_graph.py  test_analytics.py  test_api_keys.py  test_audit_log.py  test_auth.py  test_cache.py  test_chat_endpoint.py  test_chunker.py  test_conversation_models.py  test_conversations_api.py  test_demo_mode.py  test_documents_api.py  test_embeddings.py  test_extractors.py  test_golden_dataset.py  test_health.py  test_ingestion_pipeline.py  test_llm.py  test_migration_indexes.py  test_no_direct_llm_sdk_imports.py  test_onboarding_api.py  test_online_eval.py  test_rbac_matrix.py  test_reranker.py  test_retrieval.py  test_rls.py  test_search_endpoint.py  test_tracing.py  test_widget_api.py
(+150 files in other folders)
